2005-04-10  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/xmlconfig.py:
	Fixed misplaced output per type of config option.

	* config_example.xml:
	* src/main.py:
	Added check so people can choose to have no pid file.

2005-04-09  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/oscar.py:
	Don't shutdown upon receiving limit.  Not the best fix yet, but
	better than a shutdown.

	* src/legacy/icqt.py:
	Fixed issue in difference between icq and aim messages.
	'Fixed' issue with unicode away messages.  Hides 'illegal' chars.

2005-04-06  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/oscar/tlib.py:
	Fixed lack of handling for channel 4 (old style) messages.

2005-04-05  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/utils.py:
	Fixed another xmlify bug regarding unicode vs non-unicode.

2005-04-04  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/utils.py:
	Fixed bug with xmlify not checking for string.

	* src/legacy/icqt.py:
	Fixed problem with variable being used that wasn't ever set.

2005-03-22  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/webadmin/.cvsignore:
	* src/tlib/jabber/.cvsignore:
	* src/tlib/.cvsignore:
	* src/legacy/.cvsignore:
	* src/.cvsignore:
	Removed legacy CVS files.

2005-03-20  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/utils.py:
	Added Martin von Loewis's xmlify function.

	* src/main.py:
	Fixed what is probably the cause of the infinite loop stream error.
	Bug id 45.

2005-03-13  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	Added check to make sure we're being passed an int.

2005-03-12  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/exception.py:
	* src/main.py:
	Added new exception handler.

	* src/debug.py:
	Changed logging format slightly.

2005-03-11  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	Upped version to 0.6 in preparation for release.

	* src/lang.py:
	Added french translation.

	* src/main.py:
	Added required python version check.

	* src/tlib/oscar.py: